package com.jmc.warehouse.Views;

public enum AccountType {
    ADMIN,
    WAREHOUSE_OWNER,
    WAREHOUSE_AGENT
}
